--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "aec8cf23",
    "metadata": {
     "title": "[python]"
@@ -172,106 +172,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-100\n",
-      "-99\n",
-      "-98\n",
-      "-97\n",
-      "-96\n",
-      "-95\n",
-      "-94\n",
-      "-93\n",
-      "-92\n",
-      "-91\n",
-      "-90\n",
-      "-89\n",
-      "-88\n",
-      "-87\n",
-      "-86\n",
-      "-85\n",
-      "-84\n",
-      "-83\n",
-      "-82\n",
-      "-81\n",
-      "-80\n",
-      "-79\n",
-      "-78\n",
-      "-77\n",
-      "-76\n",
-      "-75\n",
-      "-74\n",
-      "-73\n",
-      "-72\n",
-      "-71\n",
-      "-70\n",
-      "-69\n",
-      "-68\n",
-      "-67\n",
-      "-66\n",
-      "-65\n",
-      "-64\n",
-      "-63\n",
-      "-62\n",
-      "-61\n",
-      "-60\n",
-      "-59\n",
-      "-58\n",
-      "-57\n",
-      "-56\n",
-      "-55\n",
-      "-54\n",
-      "-53\n",
-      "-52\n",
-      "-51\n",
-      "-50\n",
-      "-49\n",
-      "-48\n",
-      "-47\n",
-      "-46\n",
-      "-45\n",
-      "-44\n",
-      "-43\n",
-      "-42\n",
-      "-41\n",
-      "-40\n",
-      "-39\n",
-      "-38\n",
-      "-37\n",
-      "-36\n",
-      "-35\n",
-      "-34\n",
-      "-33\n",
-      "-32\n",
-      "-31\n",
-      "-30\n",
-      "-29\n",
-      "-28\n",
-      "-27\n",
-      "-26\n",
-      "-25\n",
-      "-24\n",
-      "-23\n",
-      "-22\n",
-      "-21\n",
-      "-20\n",
-      "-19\n",
-      "-18\n",
-      "-17\n",
-      "-16\n",
-      "-15\n",
-      "-14\n",
-      "-13\n",
-      "-12\n",
-      "-11\n",
-      "-10\n",
-      "-9\n",
-      "-8\n",
-      "-7\n",
-      "-6\n",
-      "-5\n",
-      "-4\n",
-      "-3\n",
-      "-2\n",
-      "-1\n",
+      "100\n",
+      "99\n",
+      "98\n",
+      "97\n",
+      "96\n",
+      "95\n",
+      "94\n",
+      "93\n",
+      "92\n",
+      "91\n",
+      "90\n",
+      "89\n",
+      "88\n",
+      "87\n",
+      "86\n",
+      "85\n",
+      "84\n",
+      "83\n",
+      "82\n",
+      "81\n",
+      "80\n",
+      "79\n",
+      "78\n",
+      "77\n",
+      "76\n",
+      "75\n",
+      "74\n",
+      "73\n",
+      "72\n",
+      "71\n",
+      "70\n",
+      "69\n",
+      "68\n",
+      "67\n",
+      "66\n",
+      "65\n",
+      "64\n",
+      "63\n",
+      "62\n",
+      "61\n",
+      "60\n",
+      "59\n",
+      "58\n",
+      "57\n",
+      "56\n",
+      "55\n",
+      "54\n",
+      "53\n",
+      "52\n",
+      "51\n",
+      "50\n",
+      "49\n",
+      "48\n",
+      "47\n",
+      "46\n",
+      "45\n",
+      "44\n",
+      "43\n",
+      "42\n",
+      "41\n",
+      "40\n",
+      "39\n",
+      "38\n",
+      "37\n",
+      "36\n",
+      "35\n",
+      "34\n",
+      "33\n",
+      "32\n",
+      "31\n",
+      "30\n",
+      "29\n",
+      "28\n",
+      "27\n",
+      "26\n",
+      "25\n",
+      "24\n",
+      "23\n",
+      "22\n",
+      "21\n",
+      "20\n",
+      "19\n",
+      "18\n",
+      "17\n",
+      "16\n",
+      "15\n",
+      "14\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
       "0\n"
      ]
     }
@@ -279,7 +279,7 @@
    "source": [
     "# Display all numbers from 100 to 0 \n",
     "\n",
-    "for i in range(-100, 1):\n",
+    "for i in range(100, -1, -1):\n",
     "    print(i)"
    ]
   },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "174bdcd9",
    "metadata": {},
    "outputs": [
@@ -474,57 +474,514 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 is odd\n",
-      "2 is even\n",
-      "3 is odd\n",
-      "4 is even\n",
-      "5 is odd\n",
-      "6 is even\n",
-      "7 is odd\n",
-      "8 is even\n",
-      "9 is odd\n",
-      "10 is even\n",
-      "11 is odd\n",
-      "12 is even\n",
-      "13 is odd\n",
-      "14 is even\n",
-      "15 is odd\n",
-      "16 is even\n",
-      "17 is odd\n",
-      "18 is even\n",
-      "19 is odd\n",
-      "20 is even\n",
-      "21 is odd\n",
-      "22 is even\n",
-      "23 is odd\n",
-      "24 is even\n",
-      "25 is odd\n",
-      "26 is even\n",
-      "27 is odd\n",
-      "28 is even\n",
-      "29 is odd\n",
-      "30 is even\n",
-      "31 is odd\n",
-      "32 is even\n",
-      "33 is odd\n",
-      "34 is even\n",
-      "35 is odd\n",
-      "36 is even\n",
-      "37 is odd\n",
-      "38 is even\n",
-      "39 is odd\n",
-      "40 is even\n"
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "116\n",
+      "117\n",
+      "118\n",
+      "119\n",
+      "120\n",
+      "121\n",
+      "122\n",
+      "123\n",
+      "124\n",
+      "125\n",
+      "126\n",
+      "127\n",
+      "128\n",
+      "129\n",
+      "130\n",
+      "131\n",
+      "132\n",
+      "133\n",
+      "134\n",
+      "135\n",
+      "136\n",
+      "137\n",
+      "138\n",
+      "139\n",
+      "140\n",
+      "141\n",
+      "142\n",
+      "143\n",
+      "144\n",
+      "145\n",
+      "146\n",
+      "147\n",
+      "148\n",
+      "149\n",
+      "150\n",
+      "151\n",
+      "152\n",
+      "153\n",
+      "154\n",
+      "155\n",
+      "156\n",
+      "157\n",
+      "158\n",
+      "159\n",
+      "160\n",
+      "161\n",
+      "162\n",
+      "163\n",
+      "164\n",
+      "165\n",
+      "166\n",
+      "167\n",
+      "168\n",
+      "169\n",
+      "170\n",
+      "171\n",
+      "172\n",
+      "173\n",
+      "174\n",
+      "175\n",
+      "176\n",
+      "177\n",
+      "178\n",
+      "179\n",
+      "180\n",
+      "181\n",
+      "182\n",
+      "183\n",
+      "184\n",
+      "185\n",
+      "186\n",
+      "187\n",
+      "188\n",
+      "189\n",
+      "190\n",
+      "191\n",
+      "192\n",
+      "193\n",
+      "194\n",
+      "195\n",
+      "196\n",
+      "197\n",
+      "198\n",
+      "199\n",
+      "200\n",
+      "201\n",
+      "202\n",
+      "203\n",
+      "204\n",
+      "205\n",
+      "206\n",
+      "207\n",
+      "208\n",
+      "209\n",
+      "210\n",
+      "211\n",
+      "212\n",
+      "213\n",
+      "214\n",
+      "215\n",
+      "216\n",
+      "217\n",
+      "218\n",
+      "219\n",
+      "220\n",
+      "221\n",
+      "222\n",
+      "223\n",
+      "224\n",
+      "225\n",
+      "226\n",
+      "227\n",
+      "228\n",
+      "229\n",
+      "230\n",
+      "231\n",
+      "232\n",
+      "233\n",
+      "234\n",
+      "235\n",
+      "236\n",
+      "237\n",
+      "238\n",
+      "239\n",
+      "240\n",
+      "241\n",
+      "242\n",
+      "243\n",
+      "244\n",
+      "245\n",
+      "246\n",
+      "247\n",
+      "248\n",
+      "249\n",
+      "250\n",
+      "251\n",
+      "252\n",
+      "253\n",
+      "254\n",
+      "255\n",
+      "256\n",
+      "257\n",
+      "258\n",
+      "259\n",
+      "260\n",
+      "261\n",
+      "262\n",
+      "263\n",
+      "264\n",
+      "265\n",
+      "266\n",
+      "267\n",
+      "268\n",
+      "269\n",
+      "270\n",
+      "271\n",
+      "272\n",
+      "273\n",
+      "274\n",
+      "275\n",
+      "276\n",
+      "277\n",
+      "278\n",
+      "279\n",
+      "280\n",
+      "281\n",
+      "282\n",
+      "283\n",
+      "284\n",
+      "285\n",
+      "286\n",
+      "287\n",
+      "288\n",
+      "289\n",
+      "290\n",
+      "291\n",
+      "292\n",
+      "293\n",
+      "294\n",
+      "295\n",
+      "296\n",
+      "297\n",
+      "298\n",
+      "299\n",
+      "300\n",
+      "301\n",
+      "302\n",
+      "303\n",
+      "304\n",
+      "305\n",
+      "306\n",
+      "307\n",
+      "308\n",
+      "309\n",
+      "310\n",
+      "311\n",
+      "312\n",
+      "313\n",
+      "314\n",
+      "315\n",
+      "316\n",
+      "317\n",
+      "318\n",
+      "319\n",
+      "320\n",
+      "321\n",
+      "322\n",
+      "323\n",
+      "324\n",
+      "325\n",
+      "326\n",
+      "327\n",
+      "328\n",
+      "329\n",
+      "330\n",
+      "331\n",
+      "332\n",
+      "333\n",
+      "334\n",
+      "335\n",
+      "336\n",
+      "337\n",
+      "338\n",
+      "339\n",
+      "340\n",
+      "341\n",
+      "342\n",
+      "343\n",
+      "344\n",
+      "345\n",
+      "346\n",
+      "347\n",
+      "348\n",
+      "349\n",
+      "350\n",
+      "351\n",
+      "352\n",
+      "353\n",
+      "354\n",
+      "355\n",
+      "356\n",
+      "357\n",
+      "358\n",
+      "359\n",
+      "360\n",
+      "361\n",
+      "362\n",
+      "363\n",
+      "364\n",
+      "365\n",
+      "366\n",
+      "367\n",
+      "368\n",
+      "369\n",
+      "370\n",
+      "371\n",
+      "372\n",
+      "373\n",
+      "374\n",
+      "375\n",
+      "376\n",
+      "377\n",
+      "378\n",
+      "379\n",
+      "380\n",
+      "381\n",
+      "382\n",
+      "383\n",
+      "384\n",
+      "385\n",
+      "386\n",
+      "387\n",
+      "388\n",
+      "389\n",
+      "390\n",
+      "391\n",
+      "392\n",
+      "393\n",
+      "394\n",
+      "395\n",
+      "396\n",
+      "397\n",
+      "398\n",
+      "399\n",
+      "400\n",
+      "401\n",
+      "402\n",
+      "403\n",
+      "404\n",
+      "405\n",
+      "406\n",
+      "407\n",
+      "408\n",
+      "409\n",
+      "410\n",
+      "411\n",
+      "412\n",
+      "413\n",
+      "414\n",
+      "415\n",
+      "416\n",
+      "417\n",
+      "418\n",
+      "419\n",
+      "420\n",
+      "421\n",
+      "422\n",
+      "423\n",
+      "424\n",
+      "425\n",
+      "426\n",
+      "427\n",
+      "428\n",
+      "429\n",
+      "430\n",
+      "431\n",
+      "432\n",
+      "433\n",
+      "434\n",
+      "435\n",
+      "436\n",
+      "437\n",
+      "438\n",
+      "439\n",
+      "440\n",
+      "441\n",
+      "442\n",
+      "443\n",
+      "444\n",
+      "445\n",
+      "446\n",
+      "447\n",
+      "448\n",
+      "449\n",
+      "450\n",
+      "451\n",
+      "452\n",
+      "453\n",
+      "454\n",
+      "455\n",
+      "456\n",
+      "457\n",
+      "458\n",
+      "459\n",
+      "460\n",
+      "461\n",
+      "462\n",
+      "463\n",
+      "464\n",
+      "465\n",
+      "466\n",
+      "467\n",
+      "468\n",
+      "469\n",
+      "470\n",
+      "471\n",
+      "472\n",
+      "473\n",
+      "474\n",
+      "475\n",
+      "476\n",
+      "477\n",
+      "478\n",
+      "479\n",
+      "480\n",
+      "481\n",
+      "482\n",
+      "483\n",
+      "484\n",
+      "485\n",
+      "486\n",
+      "487\n",
+      "488\n",
+      "489\n",
+      "490\n",
+      "491\n",
+      "492\n",
+      "493\n",
+      "494\n",
+      "495\n",
+      "496\n",
+      "497\n",
+      "498\n",
+      "499\n",
+      "500\n"
      ]
     }
    ],
    "source": [
     "# Display all numbers from 1 to 500.\n",
     "\n",
-    "for i in range(1, 41):\n",
-    "    if i % 2 == 0:\n",
-    "        print(i, 'is even')\n",
-    "    else:\n",
-    "        print(i, 'is odd')"
+    "for i in range(1, 501):\n",
+    "    print(i)"
    ]
   },
   {
@@ -537,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "620b3886",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -658,14 +1115,15 @@
       "749\n",
       "756\n",
       "763\n",
-      "770\n"
+      "770\n",
+      "777\n"
      ]
     }
    ],
    "source": [
     "# Display all multiples of 7 from 0 to 777\n",
     "\n",
-    "for i in range(0, 777, 7):\n",
+    "for i in range(0, 784, 7):\n",
     "    print(i)"
    ]
   },
@@ -681,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "6db862fd",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -727,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "beb062f6",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -784,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "8c847ed3",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -795,28 +1253,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 0 0 \n",
-      " 0 1 \n",
-      " 0 2 \n",
-      " 0 2 \n",
-      " 1 2 \n",
-      " 2 2 \n",
-      " 3 2 \n",
-      " 4 2 \n",
-      " 5 2 \n"
+      " 0 0\n",
+      " 0 1\n",
+      " 0 2\n",
+      "\n",
+      " 1 0\n",
+      " 1 1\n",
+      " 1 2\n",
+      "\n",
+      " 2 0\n",
+      " 2 1\n",
+      " 2 2\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Display the output shown above\n",
+    "\n",
     "for i in range(3):\n",
-    "    for j in range(1):\n",
-    "        print(f\" {j} {i}\", end= ' ')\n",
-    "    print()\n",
-    "for f in range(6):\n",
-    "    for k in range (1):\n",
-    "        print(f\" {f} {i}\", end = ' ')\n",
-    "    print()"
+    "    for j in range(3):\n",
+    "        print(f\"{i} {j}\")\n",
+    "    print()\n"
    ]
   },
   {
@@ -837,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "id": "bb0a4a5b",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -848,19 +1306,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 2 3 \n",
-      "0 1 2 3 \n",
-      "0 1 2 3 \n"
+      "0 1 2 \n",
+      "0 1 2 \n",
+      "0 1 2 \n"
      ]
     }
    ],
    "source": [
     "# Display the numbers 1 through 9 in a 3x3 square grid\n",
+    "\n",
     "for i in range(3):\n",
-    "    for j in range(4):\n",
-    "        print(f\"{j}\", end= ' ')\n",
-    "    print()\n",
-    "        "
+    "    for j in range(3):\n",
+    "        print(f\"{j}\", end = ' ')\n",
+    "    print()"
    ]
   },
   {
@@ -928,12 +1386,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3b81fd1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the asterisk pattern shown above"
+    "# Display the asterisk pattern shown above\n",
+    "\n"
    ]
   },
   {
